--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,11 @@ jobs:
         run: |
           echo "Welcome to Test Step"
           echo "Testing is going on"
+
+   test13:
+    runs-on: windows-latest
+    steps:
+      - name: Print a test Statement
+        run: |
+          echo "Welcome to Test Step"
+          echo "Testing is going on"
