--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,4 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Print a test Statement
-        run: |
-          echo "Welcome to Test Step"
-          echo "Testing is going on"
+        run: echo "Welcome to Test Step"
