--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,8 @@ jobs:
         run: |
           echo "Welcome to Test Step"
           echo "Testing is going on"
-
    test13:
     runs-on: windows-latest
     steps:
-      - name: Print a test Statement
+      - name: Print a test tatement
         run: echo "Welcome to Test Step"
